--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+body {
+  font-family: 'Poppins', sans-serif;
+}
 .wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(40, 31, 113, 1) 0%, rgba(20, 73, 84, 1) 73%);
 }
 
 .main {
@@ -9,6 +14,6 @@
 }
 
 .container {
-  width: min(100% - 20px, 1260px);
+  width: min(100% - 20px, 1460px);
   margin-inline: auto;
 }
