--- a/src/pages/garage/garage.css
+++ b/src/pages/garage/garage.css
@@ -10,10 +10,12 @@
 .controls__input {
   padding: 0.3rem 0.5rem;
   border: 1px solid black;
+  border-radius: 0.3rem;
 }
 
 .controls__color {
   cursor: pointer;
+  border-radius: 0.3rem;
 }
 
 .controls__btn {
@@ -49,6 +51,19 @@
   margin-right: 1rem;
 }
 
+.garage__pagination {
+  margin-bottom: 1rem;
+}
+.info__title,
+.pagination__title {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.pagination__title {
+  font-size: 1.3rem;
+}
 /* Track item LI*/
 
 .track__item {
@@ -60,6 +75,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 0.5rem;
 }
 
 .track__road {
@@ -72,6 +88,7 @@
   position: relative;
   width: 100%;
   margin: 0;
+  border-radius: 0.5rem;
 }
 
 .track__road::after {
@@ -100,16 +117,63 @@
   text-transform: uppercase;
 }
 
-.info__btn {
-  border-radius: 0.3rem;
-  width: 3rem;
-}
-
 .info__btn-delete {
   margin-left: 1rem;
 }
 
+/* buttons */
+.controls__btn,
+.pagination__btn,
+.info__btn,
+.road__btn {
+  background-color: #3eb2fd;
+  background-image: linear-gradient(1deg, #4f58fd, #149bf3 99%);
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  border-radius: 2rem;
+  color: #fff;
+  padding: 0.5rem;
+  transition: background-color 0.2s, background-position 0.2s;
+  user-select: none;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.controls__btn:active,
+.controls__btn:focus {
+  outline: none;
+}
+
+.controls__btn:hover,
+.pagination__btn:hover,
+.info__btn:hover,
+.road__btn:hover {
+  background-position: -20px -20px;
+}
+
+button[disabled],
+html input[disabled] {
+  cursor: default;
+  background: #808080;
+}
+
+.info__btn,
 .road__btn {
   border-radius: 0.3rem;
   width: 3rem;
+  padding: 0.1rem 0.2rem;
+}
+
+.road__btn-start {
+  margin-right: 0.5rem;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+}
+
+.road__btn-stop {
+  margin-right: 0.5rem;
+  position: absolute;
+  top: 0;
+  left: 3.3rem;
+  z-index: 10;
 }
