--- a/src/widgets/header/header.css
+++ b/src/widgets/header/header.css
@@ -1,6 +1,7 @@
 .header {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #fff;
 }
+
 .header__container {
   padding: 1rem 0;
 }
@@ -17,7 +18,42 @@
   gap: 1rem;
 }
 
+.header__logo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.logo__text {
+  color: #fff;
+  font-size: 1.7rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+}
+.logo__img {
+  background-image: url(../../assets/icon/logo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 3rem;
+  height: 3rem;
+}
+
 .header__btn {
-  padding: 0.5rem;
+  padding: 0.5rem 2rem;
   border-radius: 4rem;
+  background-color: #0156ff;
+  color: #fff;
+  font-size: 0.7rem;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.header__btn:hover {
+  transition: 0.3s;
+  background-color: #42aaff;
+}
+
+.active__btn {
+  background-color: #42aaff;
 }
