--- a/src/widgets/modal/modalWin.css
+++ b/src/widgets/modal/modalWin.css
@@ -13,13 +13,6 @@
 .modal.open {
   transform: translate(-50%, -50%);
 }
-.modal__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
 
 .modal__body {
   min-height: 13rem;
@@ -33,38 +26,16 @@
   align-items: center;
 }
 
-.modal__close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-
-.modal__close:before,
-.modal__close:after {
-  content: '';
-  position: absolute;
-  top: 21px;
-  left: 10px;
-  width: 32px;
-  height: 2px;
-  background: #555;
-}
-
-.modal__close:before {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.modal__close:after {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
 .modal__title {
   text-align: center;
   font-weight: 600;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.modal__info {
+  flex: 1 1 auto;
+  font-size: 1.3rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-align: center;
 }
